syntax = "proto3";

package clients;

// ===== COMMON =====

message Empty {}

message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResponse {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

// ===== STATUT CLIENT =====

message StatutClient {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  int32 ordre_affichage = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateStatutClientRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
  int32 ordre_affichage = 4;
}

message UpdateStatutClientRequest {
  string id = 1;
  optional string code = 2;
  optional string nom = 3;
  optional string description = 4;
  optional int32 ordre_affichage = 5;
}

message GetStatutClientRequest {
  string id = 1;
}

message GetStatutClientByCodeRequest {
  string code = 1;
}

message ListStatutsClientRequest {
  PaginationRequest pagination = 1;
}

message ListStatutsClientResponse {
  repeated StatutClient statuts = 1;
  PaginationResponse pagination = 2;
}

message DeleteStatutClientRequest {
  string id = 1;
}

message DeleteResponse {
  bool success = 1;
}

// ===== ADRESSE =====

message Adresse {
  string id = 1;
  string client_base_id = 2;
  string ligne1 = 3;
  string ligne2 = 4;
  string code_postal = 5;
  string ville = 6;
  string pays = 7;
  string type = 8;
  string created_at = 9;
  string updated_at = 10;
}

message CreateAdresseRequest {
  string client_base_id = 1;
  string ligne1 = 2;
  string ligne2 = 3;
  string code_postal = 4;
  string ville = 5;
  string pays = 6;
  string type = 7;
}

message UpdateAdresseRequest {
  string id = 1;
  optional string ligne1 = 2;
  optional string ligne2 = 3;
  optional string code_postal = 4;
  optional string ville = 5;
  optional string pays = 6;
  optional string type = 7;
}

message GetAdresseRequest {
  string id = 1;
}

message ListAdressesRequest {
  string client_base_id = 1;
  PaginationRequest pagination = 2;
}

message ListAdressesResponse {
  repeated Adresse adresses = 1;
  PaginationResponse pagination = 2;
}

message DeleteAdresseRequest {
  string id = 1;
}

// ===== CLIENT BASE =====

message ClientBase {
  string id = 1;
  string organisation_id = 2;
  string type_client = 3;
  string nom = 4;
  string prenom = 5;
  string date_naissance = 6;
  string compte_code = 7;
  string partenaire_id = 8;
  string date_creation = 9;
  string telephone = 10;
  string email = 11;
  string statut = 12;
  string created_at = 13;
  string updated_at = 14;
  repeated Adresse adresses = 15;
}

message CreateClientBaseRequest {
  string organisation_id = 1;
  string type_client = 2;
  string nom = 3;
  string prenom = 4;
  string date_naissance = 5;
  string compte_code = 6;
  string partenaire_id = 7;
  string telephone = 8;
  string email = 9;
  string statut = 10;
}

message UpdateClientBaseRequest {
  string id = 1;
  optional string type_client = 2;
  optional string nom = 3;
  optional string prenom = 4;
  optional string date_naissance = 5;
  optional string compte_code = 6;
  optional string partenaire_id = 7;
  optional string telephone = 8;
  optional string email = 9;
  optional string statut = 10;
}

message GetClientBaseRequest {
  string id = 1;
}

message ListClientsBaseRequest {
  string organisation_id = 1;
  optional string statut_id = 2;
  optional string societe_id = 3;
  optional string search = 4;
  PaginationRequest pagination = 5;
}

message ListClientsBaseResponse {
  repeated ClientBase clients = 1;
  PaginationResponse pagination = 2;
}

message DeleteClientBaseRequest {
  string id = 1;
}

message SearchClientRequest {
  string organisation_id = 1;
  string telephone = 2;
  string nom = 3;
}

message SearchClientResponse {
  bool found = 1;
  ClientBase client = 2;
}

// ===== CLIENT ENTREPRISE =====

message ClientEntreprise {
  string id = 1;
  string raison_sociale = 2;
  string numero_tva = 3;
  string siren = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateClientEntrepriseRequest {
  string raison_sociale = 1;
  string numero_tva = 2;
  string siren = 3;
}

message UpdateClientEntrepriseRequest {
  string id = 1;
  optional string raison_sociale = 2;
  optional string numero_tva = 3;
  optional string siren = 4;
}

message GetClientEntrepriseRequest {
  string id = 1;
}

message ListClientsEntrepriseRequest {
  PaginationRequest pagination = 1;
}

message ListClientsEntrepriseResponse {
  repeated ClientEntreprise clients = 1;
  PaginationResponse pagination = 2;
}

message DeleteClientEntrepriseRequest {
  string id = 1;
}

// ===== CLIENT PARTENAIRE =====

message ClientPartenaire {
  string id = 1;
  string client_base_id = 2;
  string partenaire_id = 3;
  string role_partenaire_id = 4;
  string valid_from = 5;
  string valid_to = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateClientPartenaireRequest {
  string client_base_id = 1;
  string partenaire_id = 2;
  string role_partenaire_id = 3;
  string valid_from = 4;
  string valid_to = 5;
}

message UpdateClientPartenaireRequest {
  string id = 1;
  optional string partenaire_id = 2;
  optional string role_partenaire_id = 3;
  optional string valid_from = 4;
  optional string valid_to = 5;
}

message GetClientPartenaireRequest {
  string id = 1;
}

message ListClientsPartenaireRequest {
  optional string client_base_id = 1;
  optional string partenaire_id = 2;
  PaginationRequest pagination = 3;
}

message ListClientsPartenaireResponse {
  repeated ClientPartenaire clients = 1;
  PaginationResponse pagination = 2;
}

message DeleteClientPartenaireRequest {
  string id = 1;
}

// ===== SERVICES =====

service StatutClientService {
  rpc Create(CreateStatutClientRequest) returns (StatutClient);
  rpc Update(UpdateStatutClientRequest) returns (StatutClient);
  rpc Get(GetStatutClientRequest) returns (StatutClient);
  rpc GetByCode(GetStatutClientByCodeRequest) returns (StatutClient);
  rpc List(ListStatutsClientRequest) returns (ListStatutsClientResponse);
  rpc Delete(DeleteStatutClientRequest) returns (DeleteResponse);
}

service AdresseService {
  rpc Create(CreateAdresseRequest) returns (Adresse);
  rpc Update(UpdateAdresseRequest) returns (Adresse);
  rpc Get(GetAdresseRequest) returns (Adresse);
  rpc ListByClient(ListAdressesRequest) returns (ListAdressesResponse);
  rpc Delete(DeleteAdresseRequest) returns (DeleteResponse);
}

service ClientBaseService {
  rpc Create(CreateClientBaseRequest) returns (ClientBase);
  rpc Update(UpdateClientBaseRequest) returns (ClientBase);
  rpc Get(GetClientBaseRequest) returns (ClientBase);
  rpc List(ListClientsBaseRequest) returns (ListClientsBaseResponse);
  rpc Delete(DeleteClientBaseRequest) returns (DeleteResponse);
  rpc Search(SearchClientRequest) returns (SearchClientResponse);
}

service ClientEntrepriseService {
  rpc Create(CreateClientEntrepriseRequest) returns (ClientEntreprise);
  rpc Update(UpdateClientEntrepriseRequest) returns (ClientEntreprise);
  rpc Get(GetClientEntrepriseRequest) returns (ClientEntreprise);
  rpc List(ListClientsEntrepriseRequest) returns (ListClientsEntrepriseResponse);
  rpc Delete(DeleteClientEntrepriseRequest) returns (DeleteResponse);
}

service ClientPartenaireService {
  rpc Create(CreateClientPartenaireRequest) returns (ClientPartenaire);
  rpc Update(UpdateClientPartenaireRequest) returns (ClientPartenaire);
  rpc Get(GetClientPartenaireRequest) returns (ClientPartenaire);
  rpc List(ListClientsPartenaireRequest) returns (ListClientsPartenaireResponse);
  rpc Delete(DeleteClientPartenaireRequest) returns (DeleteResponse);
}
